unix/lang/tests/error/error_unknown_function.yab
#expect# Currently the wrong line is displayed
print 1
unknown()
print 2
